--- a/documentation/02. Setup service for the web application on AWS.md
+++ b/documentation/02. Setup service for the web application on AWS.md
@@ -10,8 +10,19 @@
 ## create upload dir under user his user directory
 3. $ sudo mkdir /home/his/upload-dir
 
+## define database connection settings as environment variables
+4.  $ sudo nano /etc/environemnt
+    # replace {content} with actual values depending on setup.
+
+  HISOLUTIONS_MYSQL_DB_HOST="{driver+host+port+db}"
+  HISOLUTIONS_MYSQL_DB_USERNAME="{username}"
+  HISOLUTIONS_MYSQL_DB_PASSWORD="{password}"
+
+## Reboot Server to apply settings
+5. sudo reboot
+
 ## increase ec2 instance virtual memory by adding swap memory
-4.  $ free -m                          ## to check available memory.
+6.  $ free -m                          ## to check available memory.
     $ df -h                            ## to check for available disk space to borrow from.
     $ sudo fallocate -l 1G /swapfile   ## The Commands to Allocate New (Or More) Swap Space.
     $ ls -lh /swapfile 
@@ -22,15 +33,15 @@
     $ free -m                          ## to check available memory. 
 
 ## minimise memory usage by java build
-5.  $ export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m"
+7.  $ export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m"
 
 ## compile and buil project and check if project runs - backend project - using java -jar
-6.  $ mvn clean install -P production
+8.  $ mvn clean install -P production
     $ mvn clean package -P production --pl backend
     $ java -jar backend/target/hisolutions-backend-1.0.0.war
 
 ## prepare for the deployement of application
-7.  $ sudo systemctl stop hisolutions.service
+9.  $ sudo systemctl stop hisolutions.service
     $ sudo systemctl disable hisolutions.service
     $ sudo mkdir /var/hisolutions
     $ sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war
@@ -40,7 +51,7 @@
 
 
 ##  create service for the application
-8.  $ sudo nano /etc/systemd/system/hisolutions.service
+10. $ sudo nano /etc/systemd/system/hisolutions.service
       # copy all content below
 
 
@@ -71,12 +82,15 @@ WantedBy=multi-user.target
 
 
 ## enable and start the service for the web application
-9.  $ sudo systemctl enable hisolutions.service
+11. $ sudo systemctl enable hisolutions.service
     $ sudo systemctl start hisolutions.service
     $ journalctl -u hisolutions.service -f
 
 ## reboot server to release the swap memory 
-10. $ sudo reboot
+12. $ sudo reboot
+
+## test website to check if properly loading.
+13. $ curl hisolutions.co.zw
 
 
 ## additional steps - not neccesary
