Succesifully configured AWS S3 Storage

--- a/documentation/02. Setup service for the web application on AWS.md
+++ b/documentation/02. Setup service for the web application on AWS.md
@@ -3,20 +3,28 @@
 ## clone project from git
 1.  $ git clone https://github.com/dgumbo/hisolutions.git  
 
-## browse to project target folder
-2.  $ sudo adduser his
-      # use password : his
+## Define Active Profile
+2.  $ sudo nano /etc/environment
+      SPRING_PROFILES_ACTIVE="production" 
 
-## create upload dir under user his user directory
-3. $ sudo mkdir /home/his/upload-dir
+# Storage Properties For Production
+3.  $ sudo nano /etc/environment
+  AWS_REGION="eu-west-1"
+  AWS_S3_BUCKET_NAME="hisolutions-s3-bucket"
+  AWS_ACCESS_KEY_ID="AKIAJLL4AMYI2XPKNIYQ"
+  AWS_SECRET_ACCESS_KEY="1in8sJFVuqxgscFl+8sm8Ob0N+hlh7yJX1y+HMww"
+
 
 ## define database connection settings as environment variables
 4.  $ sudo nano /etc/environemnt
-    # replace {content} with actual values depending on setup.
+    # replace {content} with actual values depending on setup. 
 
-  HISOLUTIONS_MYSQL_DB_HOST="{driver+host+port+db}"
-  HISOLUTIONS_MYSQL_DB_USERNAME="{username}"
-  HISOLUTIONS_MYSQL_DB_PASSWORD="{password}"
+  HISOLUTIONS_MYSQL_DB_HOST="jdbc:mysql://his******ns-db.cfcygvbzoc0l.eu-west-1.rds.amazonaws.com:3306/hi*******nsdb"
+  HISOLUTIONS_MYSQL_DB_USERNAME="r***t"
+  HISOLUTIONS_MYSQL_DB_PASSWORD="S******01"
+
+    $ source /etc/environment
+    $ for env in $( cat /etc/environment ); do export $(echo $env | sed -e 's/"//g');
 
 ## Reboot Server to apply settings
 5. sudo reboot
