--- a/documentation/01. Prepare Environemnt for Hosting on AWS.md
+++ b/documentation/01. Prepare Environemnt for Hosting on AWS.md
@@ -11,11 +11,15 @@
 2.  $ sudo apt-get update && sudo apt-get upgrade
 
 ## install Java 8
-3.  $ sudo apt-get install default-jdk
+3.  # $ sudo apt-get install default-jdk
     $ sudo add-apt-repository ppa:webupd8team/java
     $ sudo apt-get update
     $ sudo apt-get install oracle-java8-installer
 
+    $ export JAVA_HOME=/usr/java/jdk1.8.0_181-amd64
+    $ export JRE_HOME=//usr/java/jdk1.8.0_181-amd64/jre
+    $ sudo sh -c "echo export JAVA_HOME=/usr/java/jdk1.8.0_161/jre >> /etc/environment"
+    $ export PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin
 
 ## install Maven
 4.  $ sudo apt-get install maven
@@ -34,6 +38,43 @@
 
 9.  $ sudo apt-get update && sudo apt-get upgrade
 10. $ sudo reboot
+
+
+YUM
+
+$ wget --no-cookies --no-check-certificate --header "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" "http://download.oracle.com/otn-pub/java/jdk/8u181-b13/96a7b8442fe848ef90c96a2fad6ed6d1/jre-8u181-linux-x64.rpm"
+
+$ sudo yum localinstall jre-8u181-linux-x64.rpm
+$ rm ~/jre-8u181-linux-x64.rpm
+
+
+$ wget --no-cookies --no-check-certificate --header "Cookie: gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie" "http://download.oracle.com/otn-pub/java/jdk/8u181-b13/96a7b8442fe848ef90c96a2fad6ed6d1/jdk-8u181-linux-x64.rpm"
+
+$ sudo yum localinstall jdk-8u181-linux-x64.rpm
+$ rm ~/jdk-8u181-linux-x64.rpm
+
+$ export JAVA_HOME=/usr/java/jdk1.8.0_181-amd64
+$ export JRE_HOME=//usr/java/jdk1.8.0_181-amd64/jre
+$ sudo sh -c "echo export JAVA_HOME=/usr/java/jdk1.8.0_161/jre >> /etc/environment"
+$ export PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin
+
+# maven
+$ sudo wget http://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo
+$ sudo sed -i s/\$releasever/7/g /etc/yum.repos.d/epel-apache-maven.repo
+
+# nodejs
+$ sudo yum install -y gcc-c++ make
+$ sudo curl -sL https://rpm.nodesource.com/setup_10.x | sudo -E bash -
+$ sudo yum install nodejs
+
+
+
+#### UnInstalling NojeJs  #######
+# https://github.com/nodesource/distributions/issues/421 #
+
+
+
+
 
 
 
