Successifully configured project to use environment viriables

--- a/documentation/02. Setup service for the web application on AWS.md
+++ b/documentation/02. Setup service for the web application on AWS.md
@@ -9,22 +9,21 @@
 
 # Storage Properties For Production
 3.  $ sudo nano /etc/environment
-  AWS_REGION="eu-west-1"
-  AWS_S3_BUCKET_NAME="hisolutions-s3-bucket"
-  AWS_ACCESS_KEY_ID="AKIAJLL4AMYI2XPKNIYQ"
-  AWS_SECRET_ACCESS_KEY="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"
+  AWS_REGION="${}"
+  AWS_S3_BUCKET_NAME="${}"
+  AWS_ACCESS_KEY_ID="${}"
+  AWS_SECRET_ACCESS_KEY="${}"
 
 
 ## define database connection settings as environment variables
 4.  $ sudo nano /etc/environemnt
     # replace {content} with actual values depending on setup. 
 
-  HISOLUTIONS_MYSQL_DB_HOST="jdbc:mysql://his******ns-db.cfcygvbzoc0l.eu-west-1.rds.amazonaws.com:3306/hi*******nsdb"
-  HISOLUTIONS_MYSQL_DB_USERNAME="r***t"
-  HISOLUTIONS_MYSQL_DB_PASSWORD="S******01"
+    HISOLUTIONS_MYSQL_DB_HOST="${}"
+    HISOLUTIONS_MYSQL_DB_USERNAME="${}"
+    HISOLUTIONS_MYSQL_DB_PASSWORD="${}"
 
-    $ source /etc/environment
-    $ for env in $( cat /etc/environment ); do export $(echo $env | sed -e 's/"//g');
+    $ source /etc/environment 
 
 ## Reboot Server to apply settings
 5. sudo reboot
