--- a/documentation/02. Setup service for the web application on AWS.md
+++ b/documentation/02. Setup service for the web application on AWS.md
@@ -10,7 +10,7 @@
 # Storage Properties For Production
 3.  $ sudo nano /etc/environment
   AWS_REGION="${}"
-  AWS_S3_BUCKET_NAME="${}"
+  AWS_S3_HISOLUTIONS_STORAGE_BUCKET_NAME="${}"
   AWS_ACCESS_KEY_ID="${}"
   AWS_SECRET_ACCESS_KEY="${}"
 
