--- a/documentation/01. Prepare Environemnt for Hosting on AWS.md
+++ b/documentation/01. Prepare Environemnt for Hosting on AWS.md
@@ -11,8 +11,7 @@
 2.  $ sudo apt-get update && sudo apt-get upgrade
 
 ## install Java 8
-3.  # $ sudo apt-get install default-jdk
-    $ sudo add-apt-repository ppa:webupd8team/java
+3.  $ sudo add-apt-repository ppa:webupd8team/java
     $ sudo apt-get update
     $ sudo apt-get install oracle-java8-installer
 
@@ -34,10 +33,10 @@
 
 ## configure routing and port fowarding.
 7.  $ sudo iptables -A PREROUTING -t nat -i eth0 -p tcp --dport 80 -j REDIRECT --to-port 8080
-8.  $ sudo apt-get install iptables-persistent
+    $ sudo apt-get install iptables-persistent
 
-9.  $ sudo apt-get update && sudo apt-get upgrade
-10. $ sudo reboot
+8.  $ sudo apt-get update && sudo apt-get upgrade
+9.  $ sudo reboot
 
 
 YUM
