--- a/documentation/02. Setup service for the web application on AWS.md
+++ b/documentation/02. Setup service for the web application on AWS.md
@@ -39,7 +39,7 @@
     $ sudo swapon -s                   ## Check if swap memory set successifuly.
     $ free -m                          ## to check available memory. 
 
-## one command :- df -h && sudo fallocate -l 1G /swapfile && ls -lh /swapfile && sudo chmod 600 /swapfile && sudo mkswap /swapfile && sudo swapon /swapfile && sudo swapon -s && free -m 
+## one command -: df -h && sudo fallocate -l 1G /swapfile && ls -lh /swapfile && sudo chmod 600 /swapfile && sudo mkswap /swapfile && sudo swapon /swapfile && sudo swapon -s && free -m 
  
 ## minimise memory usage by java build
 7.  $ export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m"
