--- a/documentation/02. Setup service for the web application on AWS.md
+++ b/documentation/02. Setup service for the web application on AWS.md
@@ -45,31 +45,41 @@
 7.  $ export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m"
 
 ## compile and buil project and check if project runs - backend project - using java -jar
-8.  $ mvn clean install -P production
-    $ mvn clean package -P production --pl backend
+8.  $ mvn clean install
     $ java -jar backend/target/hisolutions-backend-1.0.0.war
 
+## create executing user for the applcation
+9. $ sudo adduser his
+
 ## prepare for the deployement of application
-9.  $ sudo systemctl stop hisolutions.service
+10. $ sudo systemctl stop hisolutions.service
     $ sudo systemctl disable hisolutions.service
     $ sudo mkdir /var/hisolutions
     $ sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war
     $ sudo cp backend/target/hisolutions-backend-1.0.0.war /var/hisolutions/
     $ sudo chown his:his /var/hisolutions/hisolutions-backend-1.0.0.war
-    $ sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war 
+    $ sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war
+
+## Command One -: sudo systemctl stop hisolutions.service && sudo systemctl disable hisolutions.service 
+# Command #Two -: sudo mkdir /var/hisolutions 
+# Command #Three -: sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war && sudo cp backend/target/hisolutions-backend-1.0.0.war /var/hisolutions/ && sudo chown his:his /var/hisolutions/hisolutions-backend-1.0.0.war && sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war 
 
 
 ##  create service for the application
-10. $ sudo nano /etc/systemd/system/hisolutions.service
+11. $ sudo nano /etc/systemd/system/hisolutions.service
       # copy all content below
 
 
-# Content to Copy Start
+#################################################################################################################
+###################################### Content to Copy Start ####################################################
 [Unit]
 Description=HiSolutions Web App Service
 
 [Service]
 User=his
+#...
+EnvironmentFile=/etc/environment
+#...
 # The configuration file application.properties should be here:
 
 #change this to your workspace
@@ -87,7 +97,8 @@ RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
-# Content to Copy End
+################################### Content to Copy End  #######################################################
+################################################################################################################
 
 
 ## enable and start the service for the web application
@@ -95,11 +106,15 @@ WantedBy=multi-user.target
     $ sudo systemctl start hisolutions.service
     $ journalctl -u hisolutions.service -f
 
-## reboot server to release the swap memory 
-12. $ sudo reboot
+#### One Command -: 
+# sudo systemctl enable hisolutions.service && sudo systemctl start hisolutions.service && journalctl -u hisolutions.service -f
 
 ## test website to check if properly loading.
-13. $ curl hisolutions.co.zw
+12. $ curl hisolutions.co.zw
+
+## reboot server to release the swap memory 
+13. $ sudo reboot
+
 
 
 ## additional steps - not neccesary
