Finished Refactoring Landing Module

--- a/documentation/03. Update web application after modifications and Re-Deploy.md
+++ b/documentation/03. Update web application after modifications and Re-Deploy.md
@@ -1,11 +1,14 @@
 ##################     Update the application after changes made      #####################
 
+## Rebbot the server
+1.  $ sudo reboot
+
 ## pull updated project from git
-1.  $ cd hisolutions
+2.  $ cd hisolutions
     $ git pull 
 
 ## increase ec2 instance virtual memory by adding swap memory
-2.  $ free -m                          ## to check available memory.
+3.  $ free -m                          ## to check available memory.
     $ df -h                            ## to check for available disk space to borrow from.
     $ sudo fallocate -l 1G /swapfile   ## The Commands to Allocate New (Or More) Swap Space.
     $ ls -lh /swapfile 
@@ -15,36 +18,48 @@
     $ sudo swapon -s                   ## Check if swap memory set successifuly.
     $ free -m                          ## to check available memory. 
 
-## minimise memory usage by java build
-3.  $ export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m"
+#### one command -: 
+# df -h && sudo fallocate -l 1G /swapfile && ls -lh /swapfile && sudo chmod 600 /swapfile && sudo mkswap /swapfile && sudo swapon /swapfile && sudo swapon -s && free -m 
 
-## stop the application web service 
-4.  $ sudo systemctl stop hisolutions.service
-    $ sudo systemctl disable hisolutions.service
-    $ sudo rm -rf /var/hisolutions
+## minimise memory usage by java build
+4.  $ export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m"
 
 ## compile and buil project and check if project runs - backend project - using java -jar
 5.  $ mvn clean install -P production
     $ mvn clean package -P production --pl backend
     $ java -jar backend/target/hisolutions-backend-1.0.0.war
 
-## prepare for the deployement of application
-6.  $ sudo mkdir /var/hisolutions
+## stop the application web service 
+5.  $ sudo systemctl stop hisolutions.service
+    $ sudo systemctl disable hisolutions.service 
+    $ sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war
     $ sudo cp backend/target/hisolutions-backend-1.0.0.war /var/hisolutions/
     $ sudo chown his:his /var/hisolutions/hisolutions-backend-1.0.0.war
-    $ sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war 
+    $ sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war
 
+#### Command One -: 
+# sudo systemctl stop hisolutions.service && sudo systemctl disable hisolutions.service  
+# Command #Three -: 
+# sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war && sudo cp backend/target/hisolutions-backend-1.0.0.war /var/hisolutions/ && sudo chown his:his /var/hisolutions/hisolutions-backend-1.0.0.war && sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war 
+  
 
 ## enable and start the service for the web application
 7.  $ sudo systemctl enable hisolutions.service
     $ sudo systemctl start hisolutions.service
     $ journalctl -u hisolutions.service -f
 
+#### One Command -: 
+# sudo systemctl enable hisolutions.service && sudo systemctl start hisolutions.service && journalctl -u hisolutions.service -f
+
+
+## test website to check if properly loading.
+8. $ curl hisolutions.co.zw
+
+
 ## reboot server to release the swap memory 
-8.  $ sudo reboot
+9.  $ sudo reboot
 
-
-
+ 
 
 ## additional steps - not neccesary
 ## upgrade all upgradable nodejs packages on development computer
