Finished Refactoring Landing Module

--- a/documentation/03. Update web application after modifications and Re-Deploy.md
+++ b/documentation/03. Update web application after modifications and Re-Deploy.md
@@ -25,9 +25,7 @@
 4.  $ export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m"
 
 ## compile and buil project and check if project runs - backend project - using java -jar
-5.  $ mvn clean install -P production
-    $ mvn clean package -P production --pl backend
-    $ java -jar backend/target/hisolutions-backend-1.0.0.war
+5.  $ mvn clean install
 
 ## stop the application web service 
 5.  $ sudo systemctl stop hisolutions.service
@@ -39,7 +37,8 @@
 
 #### Command One -: 
 # sudo systemctl stop hisolutions.service && sudo systemctl disable hisolutions.service  
-# Command #Three -: 
+
+#### Command Two -: 
 # sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war && sudo cp backend/target/hisolutions-backend-1.0.0.war /var/hisolutions/ && sudo chown his:his /var/hisolutions/hisolutions-backend-1.0.0.war && sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war 
   
 
