finished working on navigation

--- a/documentation/03. Update web application after modifications and Re-Deploy.md
+++ b/documentation/03. Update web application after modifications and Re-Deploy.md
@@ -34,6 +34,8 @@
 ## compile and buil project and check if project runs - backend project - using java -jar
 6.  $ mvn clean install
 
+    ## $ java -jar backend/target/hisolutions-backend-1.0.0.war
+
 ## override existing service package file with new build
 7.  $ sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war
     $ sudo cp backend/target/hisolutions-backend-1.0.0.war /var/hisolutions/
