99% finished service category services view

--- a/documentation/03. Update web application after modifications and Re-Deploy.md
+++ b/documentation/03. Update web application after modifications and Re-Deploy.md
@@ -6,16 +6,19 @@
 ## pull updated project from git
 2.  $ cd hisolutions
     $ git pull 
+#### One Command
+#   $ cd hisolutions && git pull
 
 ## stop the application web service 
 5.  $ sudo systemctl stop hisolutions.service
     $ sudo systemctl disable hisolutions.service 
-
 #### One Command -: 
-# sudo systemctl stop hisolutions.service && sudo systemctl disable hisolutions.service  
+#   $ sudo systemctl stop hisolutions.service && sudo systemctl disable hisolutions.service  
 
+## minimise memory usage by java build
 ## increase ec2 instance virtual memory by adding swap memory
-3.  $ free -m                          ## to check available memory.
+3.  $ export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m"
+4.  $ free -m                          ## to check available memory.
     $ df -h                            ## to check for available disk space to borrow from.
     $ sudo fallocate -l 1G /swapfile   ## The Commands to Allocate New (Or More) Swap Space.
     $ ls -lh /swapfile 
@@ -26,15 +29,13 @@
     $ free -m                          ## to check available memory. 
 
 #### one command -: 
-# df -h && sudo fallocate -l 1G /swapfile && ls -lh /swapfile && sudo chmod 600 /swapfile && sudo mkswap /swapfile && sudo swapon /swapfile && sudo swapon -s && free -m 
+# export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m" && df -h && sudo fallocate -l 1G /swapfile && ls -lh /swapfile && sudo chmod 600 /swapfile && sudo mkswap /swapfile && sudo swapon /swapfile && sudo swapon -s && free -m 
 
-## minimise memory usage by java build
-4.  $ export _JAVA_OPTIONS="-Xms1024m -Xmx1024m -XX:MaxMetaspaceSize=512m"
 
 ## compile and buil project and check if project runs - backend project - using java -jar
-6.  $ mvn clean install
+5.  $ mvn clean install
 
-    ## $ java -jar backend/target/hisolutions-backend-1.0.0.war
+### $ java -jar backend/target/hisolutions-backend-1.0.0.war
 
 ## override existing service package file with new build
 7.  $ sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war
@@ -43,7 +44,7 @@
     $ sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war
 
 #### One Command -: 
-# sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war && sudo cp backend/target/hisolutions-backend-1.0.0.war /var/hisolutions/ && sudo chown his:his /var/hisolutions/hisolutions-backend-1.0.0.war && sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war 
+#   $ sudo rm -rf /var/hisolutions/hisolutions-backend-1.0.0.war && sudo cp backend/target/hisolutions-backend-1.0.0.war /var/hisolutions/ && sudo chown his:his /var/hisolutions/hisolutions-backend-1.0.0.war && sudo chmod 500 /var/hisolutions/hisolutions-backend-1.0.0.war 
   
 
 ## enable and start the service for the web application
@@ -62,7 +63,6 @@
 ## reboot server to release the swap memory 
 10. $ sudo reboot
 
- 
 
 ## additional steps - not neccesary
 ## upgrade all upgradable nodejs packages on development computer
