--- a/documentation/01. Prepare Environemnt for Hosting on AWS.md
+++ b/documentation/01. Prepare Environemnt for Hosting on AWS.md
@@ -17,19 +17,20 @@
 
     $ export JAVA_HOME=/usr/java/jdk1.8.0_181-amd64
     $ export JRE_HOME=//usr/java/jdk1.8.0_181-amd64/jre
-    $ sudo sh -c "echo export JAVA_HOME=/usr/java/jdk1.8.0_161/jre >> /etc/environment"
+    $ sudo sh -c "echo JAVA_HOME=/usr/java/jdk1.8.0_161/jre >> /etc/environment"
     $ export PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin
+    $ source /etc/environment && echo {$JAVA_HOME}
 
-##  $ sudo add-apt-repository ppa:webupd8team/java && sudo apt-get update && sudo apt-get install oracle-java8-installer -y && export JAVA_HOME=/usr/java/jdk1.8.0_181-amd64 && export JRE_HOME=//usr/java/jdk1.8.0_181-amd64/jre && sudo sh -c "echo export JAVA_HOME=/usr/java/jdk1.8.0_161/jre >> /etc/environment" && export PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin
+##  $ sudo add-apt-repository ppa:webupd8team/java && sudo apt-get update && sudo apt-get install oracle-java8-installer -y && export JAVA_HOME=/usr/java/jdk1.8.0_181-amd64 && export JRE_HOME=//usr/java/jdk1.8.0_181-amd64/jre && sudo sh -c "echo JAVA_HOME=/usr/lib/jvm/java-8-oracle/jre/ >> /etc/environment" && export PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin && source /etc/environment && echo {$JAVA_HOME}
 
 ## install Maven && NodeJS latest >=v10 && Node Package Manager npm
 4.  $ sudo apt-get install maven -y
-    $ curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+    $ curl -sL https://deb.nodesource.com/setup_11.x | sudo -E bash -
     $ sudo apt-get install -y nodejs
     $ sudo apt-get install -y build-essential
     $ sudo npm install -g @angular/cli
 
-##  $ sudo apt-get install maven -y && curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash - && sudo apt-get install -y nodejs && sudo apt-get install -y build-essential && sudo npm install -g @angular/cli 
+##  $ sudo apt-get install maven -y && curl -sL https://deb.nodesource.com/setup_11.x | sudo -E bash - && sudo apt-get install -y nodejs && sudo apt-get install -y build-essential && sudo npm install -g @angular/cli 
 
 ## configure routing and port fowarding.
 5.  $ sudo iptables -A PREROUTING -t nat -i eth0 -p tcp --dport 80 -j REDIRECT --to-port 8080
