modified application.properties bd settings

--- a/documentation/01. Prepare Environemnt for Hosting on AWS.md
+++ b/documentation/01. Prepare Environemnt for Hosting on AWS.md
@@ -19,9 +19,9 @@
     $ export JRE_HOME=//usr/java/jdk1.8.0_181-amd64/jre
     $ sudo sh -c "echo JAVA_HOME=/usr/java/jdk1.8.0_161/jre >> /etc/environment"
     $ export PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin
-    $ source /etc/environment && echo {$JAVA_HOME}
+    $ source /etc/environment && echo {$JAVA_HOME} && java -version
 
-##  $ sudo add-apt-repository ppa:webupd8team/java && sudo apt-get update && sudo apt-get install oracle-java8-installer -y && export JAVA_HOME=/usr/java/jdk1.8.0_181-amd64 && export JRE_HOME=//usr/java/jdk1.8.0_181-amd64/jre && sudo sh -c "echo JAVA_HOME=/usr/lib/jvm/java-8-oracle/jre/ >> /etc/environment" && export PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin && source /etc/environment && echo {$JAVA_HOME}
+##  $ sudo add-apt-repository ppa:webupd8team/java && sudo apt-get update && sudo apt-get install oracle-java8-installer -y && export JAVA_HOME=/usr/java/jdk1.8.0_181-amd64 && export JRE_HOME=//usr/java/jdk1.8.0_181-amd64/jre && sudo sh -c "echo JAVA_HOME=/usr/lib/jvm/java-8-oracle/jre/ >> /etc/environment" && export PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin && source /etc/environment && reset && echo {$JAVA_HOME} && java -version
 
 ## install Maven && NodeJS latest >=v10 && Node Package Manager npm
 4.  $ sudo apt-get install maven -y
@@ -38,7 +38,7 @@
 
 ##  $ sudo iptables -A PREROUTING -t nat -i eth0 -p tcp --dport 80 -j REDIRECT --to-port 8080 && sudo apt-get install iptables-persistent -y
 
-6.  $ sudo apt-get update && sudo apt-get upgrade -y && sudo apt autoremove -y && sudo reboot
+6.  $ sudo apt-get update && sudo apt-get upgrade -y && sudo apt-get -f install && sudo apt autoremove -y && sudo reboot
 
 
 YUM
