--- a/documentation/02. Setup service for the web application on AWS.md
+++ b/documentation/02. Setup service for the web application on AWS.md
@@ -17,10 +17,7 @@
       HISOLUTIONS_MYSQL_DB_USERNAME="${}"
       HISOLUTIONS_MYSQL_DB_PASSWORD="${}"
 
-    $ source /etc/environment 
-
-## Reboot Server to apply settings
-4. sudo reboot
+    $ source /etc/environment  
 
 ## increase ec2 instance virtual memory by adding swap memory
 5.  $ free -m                          ## to check available memory.
@@ -43,7 +40,7 @@
     $ cd hisolutions && mvn clean install
     $ java -jar backend/target/hisolutions-backend-1.0.0.war
 
-##  $ git clone https://github.com/dgumbo/hisolutions.git && cd hisolutions && mvn clean install && java -jar backend/target/hisolutions-backend-1.0.0.war
+##  $ reset && git clone https://github.com/dgumbo/hisolutions.git && cd hisolutions && mvn clean install && java -jar backend/target/hisolutions-backend-1.0.0.war
 
 ## create executing user for the applcation
 9. $ sudo adduser his
