modified application.properties bd settings

--- a/documentation/02. Setup service for the web application on AWS.md
+++ b/documentation/02. Setup service for the web application on AWS.md
@@ -40,7 +40,7 @@
     $ cd hisolutions && mvn clean install
     $ java -jar backend/target/hisolutions-backend-1.0.0.war
 
-##  $ reset && git clone https://github.com/dgumbo/hisolutions.git && cd hisolutions && mvn clean install && java -jar backend/target/hisolutions-backend-1.0.0.war
+##  $ git clone https://github.com/dgumbo/hisolutions.git && cd hisolutions && reset && mvn clean install && java -jar backend/target/hisolutions-backend-1.0.0.war
 
 ## create executing user for the applcation
 9. $ sudo adduser his
